--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Assignment/Task for the role of Software Developer at LetsEndorse",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "install": "cd client && npm run build",
+    "heroku-prebuild": "npm install",
+    "heroku-postbuild": "cd client && npm install && npm run build"
+  },
+  "engines": {
+    "node": "^14.0.0",
+    "npm": "^8.0.0"
   },
   "repository": {
     "type": "git",
@@ -21,5 +28,11 @@
   "bugs": {
     "url": "https://github.com/himanshua790/tic-tac-toe/issues"
   },
-  "homepage": "https://github.com/himanshua790/tic-tac-toe#readme"
+  "homepage": "https://github.com/himanshua790/tic-tac-toe#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.0.14",
+    "socket.io": "^4.4.0"
+  }
 }
