--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Assignment/Task for the role of Software Developer at LetsEndorse",
   "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "install": "cd client && npm run build",
     "heroku-prebuild": "npm install",
     "heroku-postbuild": "cd client && npm install && npm run build"
@@ -32,7 +32,6 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.0.14",
     "socket.io": "^4.4.0"
   }
 }
