--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "server": "nodemon server.js ",
+    "client": "npm start --prefix client",
+    "build": "npm install --prefix client && npm run build --prefix client",
     "install": "cd client && npm run build",
     "heroku-prebuild": "npm install",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "^14.0.0",
