--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js ",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "build": "npm install --prefix client && npm run build --prefix client",
-    "install": "cd client && npm run build",
-    "heroku-prebuild": "npm install",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client  && npm run build --prefix client"
   },
   "engines": {
     "node": "^14.0.0",
@@ -36,5 +34,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "socket.io": "^4.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
