--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   },
   "homepage": "https://github.com/himanshua790/tic-tac-toe#readme",
   "dependencies": {
+    "concurrently": "^6.5.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "concurrently": "^6.5.1"
   }
 }
